{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 109,
  "lineage": "cd0fe5e1-16f3-f14d-994b-ba32707c7a30",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:vpc/vpc-0678d20b56f68eb5e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b44713057ddf7530",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0303b15f72fb3bca8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0678d20b56f68eb5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-040724cce6e4b09ab",
            "owner_id": "127214193754"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "deploy_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004",
            "arn_suffix": "targetgroup/tf-target-group/ff111c5c56c7c004",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-target-group",
            "port": 9200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "deploy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:internet-gateway/igw-0daa6fc0fa3cce397",
            "id": "igw-0daa6fc0fa3cce397",
            "owner_id": "127214193754",
            "tags": {
              "Name": "deploy-igw"
            },
            "tags_all": {
              "Name": "deploy-igw"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_elasticip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "deploy_elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02484e6c2a2d2d8fc",
            "arn": "arn:aws:ec2:us-east-2:127214193754:elastic-ip/eipalloc-02484e6c2a2d2d8fc",
            "domain": "vpc",
            "id": "eipalloc-02484e6c2a2d2d8fc",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-45-191.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.45.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deploy-elasticip"
            },
            "tags_all": {
              "Name": "deploy-elasticip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.deploy_nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "deploy_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02484e6c2a2d2d8fc",
            "association_id": "eipassoc-063336d46cd5f8187",
            "connectivity_type": "public",
            "id": "nat-0f7fa12f8ae75b5e6",
            "network_interface_id": "eni-04926fc5b12213b22",
            "private_ip": "10.0.2.158",
            "public_ip": "3.23.45.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc627ec1cd1b42ba",
            "tags": {
              "Name": "deploy-nat-gateway"
            },
            "tags_all": {
              "Name": "deploy-nat-gateway"
            }
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_peering_default",
      "mode": "managed",
      "type": "aws_route",
      "name": "deploy_peering_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040724cce6e4b09ab179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040724cce6e4b09ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00464b463fe129fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.deploy_vpc_peering.aws_vpc_peering_connection.deploy_vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_peering_private1",
      "mode": "managed",
      "type": "aws_route",
      "name": "deploy_peering_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da70f9c2048b0f3a3854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da70f9c2048b0f3a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00464b463fe129fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.deploy_vpc_peering.aws_vpc_peering_connection.deploy_vpc_peering",
            "module.route_table_private1.aws_route_table.route_table",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_peering_private2",
      "mode": "managed",
      "type": "aws_route",
      "name": "deploy_peering_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d118f626024e0c773854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d118f626024e0c77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00464b463fe129fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.deploy_vpc_peering.aws_vpc_peering_connection.deploy_vpc_peering",
            "module.route_table_private2.aws_route_table.route_table",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_peering_public",
      "mode": "managed",
      "type": "aws_route",
      "name": "deploy_peering_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ba884ced6373fe93854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ba884ced6373fe9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-00464b463fe129fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.deploy_vpc_peering.aws_vpc_peering_connection.deploy_vpc_peering",
            "module.route_table_public.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "deploy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:vpc/vpc-0a46329aa810c6142",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba8f01f921a30aff",
            "default_route_table_id": "rtb-056a24028b7ea48c0",
            "default_security_group_id": "sg-03f6455eed4246056",
            "dhcp_options_id": "dopt-0303b15f72fb3bca8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a46329aa810c6142",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056a24028b7ea48c0",
            "owner_id": "127214193754",
            "tags": {
              "Name": "deploy"
            },
            "tags_all": {
              "Name": "deploy"
            }
          }
        }
      ]
    },
    {
      "module": "module.deploy_vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "deploy_vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00464b463fe129fd1",
            "peer_owner_id": "127214193754",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0678d20b56f68eb5e",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "deploy-peering"
            },
            "tags_all": {
              "Name": "deploy-peering"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_private1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:127214193754:instance/i-0e271fb016af43291",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e271fb016af43291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06feddf9234f8971d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06feddf9234f8971d",
            "private_dns": "ip-10-0-0-127.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa612bd532d9780f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dde1c36fbd30237",
            "tags": {
              "Name": "Elasticsearch_01"
            },
            "tags_all": {
              "Name": "Elasticsearch_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036e5ca4d3fea5c2e"
            ]
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.network_interface_private1.aws_network_interface.network_interface",
            "module.security_group_private1.aws_security_group.security_group",
            "module.subnet_private1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance_private2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:127214193754:instance/i-026c8df2506c7b296",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026c8df2506c7b296",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "key_01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06f1fd986fd0224f1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f1fd986fd0224f1",
            "private_dns": "ip-10-0-1-19.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3e773baa3883399",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066a88c5d3d00ea2d",
            "tags": {
              "Name": "Elasticsearch_02"
            },
            "tags_all": {
              "Name": "Elasticsearch_02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09503a8b5e08f11f4"
            ]
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.network_interface_private2.aws_network_interface.network_interface",
            "module.security_group_private2.aws_security_group.security_group",
            "module.subnet_private2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.lb_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:listener/app/test-lb-tf/a9cb3b948ab820b0/5553810eeb3e13b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127214193754:listener/app/test-lb-tf/a9cb3b948ab820b0/5553810eeb3e13b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:loadbalancer/app/test-lb-tf/a9cb3b948ab820b0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.deploy_tg",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.load_balancer.aws_lb.load_balancer",
            "module.security_group_private1.aws_security_group.security_group",
            "module.subnet_public1.aws_subnet.subnet",
            "module.subnet_public2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface_private1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:network-interface/eni-06feddf9234f8971d",
            "id": "eni-06feddf9234f8971d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c9:22:41:5a:19",
            "owner_id": "127214193754",
            "private_ip": "10.0.0.127",
            "private_ip_list": [
              "10.0.0.127"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.127"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-036e5ca4d3fea5c2e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dde1c36fbd30237",
            "tags": {
              "Name": "deploy_private1_network_interface"
            },
            "tags_all": {
              "Name": "deploy_private1_network_interface"
            }
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.security_group_private1.aws_security_group.security_group",
            "module.subnet_private1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface_private2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:network-interface/eni-06f1fd986fd0224f1",
            "id": "eni-06f1fd986fd0224f1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6e:35:6f:1f:71",
            "owner_id": "127214193754",
            "private_ip": "10.0.1.19",
            "private_ip_list": [
              "10.0.1.19"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.19"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09503a8b5e08f11f4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066a88c5d3d00ea2d",
            "tags": {
              "Name": "deploy_private2_network_interface"
            },
            "tags_all": {
              "Name": "deploy_private2_network_interface"
            }
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.security_group_private2.aws_security_group.security_group",
            "module.subnet_private2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:route-table/rtb-0da70f9c2048b0f3a",
            "id": "rtb-0da70f9c2048b0f3a",
            "owner_id": "127214193754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f7fa12f8ae75b5e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1-route"
            },
            "tags_all": {
              "Name": "private1-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:route-table/rtb-0d118f626024e0c77",
            "id": "rtb-0d118f626024e0c77",
            "owner_id": "127214193754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f7fa12f8ae75b5e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2-route"
            },
            "tags_all": {
              "Name": "private2-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:route-table/rtb-04ba884ced6373fe9",
            "id": "rtb-04ba884ced6373fe9",
            "owner_id": "127214193754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0daa6fc0fa3cce397",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_private1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-036e5ca4d3fea5c2e",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036e5ca4d3fea5c2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "web-server-sg-private1-tf",
            "name_prefix": "",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_private2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-09503a8b5e08f11f4",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09503a8b5e08f11f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kibana ingress",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg-private2-tf",
            "name_prefix": "",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_association_private1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06870aa90f366bbdd",
            "route_table_id": "rtb-0da70f9c2048b0f3a",
            "subnet_id": "subnet-08dde1c36fbd30237"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.route_table_private1.aws_route_table.route_table",
            "module.subnet_private1.aws_subnet.subnet",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_association_private2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bcd66103375938e",
            "route_table_id": "rtb-0d118f626024e0c77",
            "subnet_id": "subnet-066a88c5d3d00ea2d"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_elasticip.aws_eip.deploy_elasticip",
            "module.deploy_nat_gateway.aws_nat_gateway.deploy_nat_gateway",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.route_table_private2.aws_route_table.route_table",
            "module.subnet_private2.aws_subnet.subnet",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_association_public1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cffcc4826cedc06e",
            "route_table_id": "rtb-04ba884ced6373fe9",
            "subnet_id": "subnet-0cc627ec1cd1b42ba"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.route_table_public.aws_route_table.route_table",
            "module.subnet_public1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_association_public2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3f87152e7c9d5d2",
            "route_table_id": "rtb-04ba884ced6373fe9",
            "subnet_id": "subnet-0fb452da12ccc192b"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.deploy_igw",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.route_table_public.aws_route_table.route_table",
            "module.subnet_public2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-08dde1c36fbd30237",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dde1c36fbd30237",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-066a88c5d3d00ea2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066a88c5d3d00ea2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0cc627ec1cd1b42ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc627ec1cd1b42ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1-subnet"
            },
            "tags_all": {
              "Name": "public1-subnet"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0fb452da12ccc192b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb452da12ccc192b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2-subnet"
            },
            "tags_all": {
              "Name": "public2-subnet"
            },
            "vpc_id": "vpc-0a46329aa810c6142"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_attachment_private1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004-20250322094819824800000008",
            "port": 9200,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004",
            "target_id": "i-0e271fb016af43291"
          },
          "dependencies": [
            "aws_lb_target_group.deploy_tg",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.ec2_instance_private1.aws_instance.aws_instance",
            "module.network_interface_private1.aws_network_interface.network_interface",
            "module.security_group_private1.aws_security_group.security_group",
            "module.subnet_private1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_attachment_private2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004-20250322094818941100000007",
            "port": 9200,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/ff111c5c56c7c004",
            "target_id": "i-026c8df2506c7b296"
          },
          "dependencies": [
            "aws_lb_target_group.deploy_tg",
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.ec2_instance_private2.aws_instance.aws_instance",
            "module.network_interface_private2.aws_network_interface.network_interface",
            "module.security_group_private2.aws_security_group.security_group",
            "module.subnet_private2.aws_subnet.subnet"
          ]
        }
      ]
    }
  ]
}